syntax = "proto3";

import "SolidityTypes.proto";
import "Payables.proto";

message IssuanceProperty {

    enum IssuanceState {
        IssuanceStateUnknown = 0;
        Initiated = 1;
        Engageable = 2;
        Cancelled = 3;
        Complete = 4;
    }

    .solidity.uint256 issuanceId = 1;
    .solidity.uint256 instrumentId = 2;
    .solidity.address makerAddress = 3;
    .solidity.uint256 issuanceCreationTimestamp = 4;    // Timestamp when issuance is created
    .solidity.uint256 issuanceDueTimestamp = 5;         // Timestamp when issuance is due (closed for new engagement)
    .solidity.uint256 issuanceCancelTimestamp = 6;      // Timestamp when issuance is cancelled
    .solidity.uint256 issuanceCompleteTimestamp = 7;    // Timestamp when issuance is complete
    .solidity.uint256 completionRatio = 8;              // [0, 10000]
    IssuanceState issuanceState = 9;
    bytes issuanceCustomProperty = 10;
    repeated EngagementProperty engagements = 11;
    repeated Payable payables = 12;
}

message EngagementProperty {

    enum EngagementState {
        EngagementStateUnknown = 0;
        Initiated = 1;
        Active = 2;
        Cancelled = 3;
        Complete = 4;
    }

    .solidity.uint256 engagementId = 1;
    .solidity.address takerAddress = 2;
    .solidity.uint256 engagementCreationTimestamp = 3;  // Timestamp when engagement is created
    .solidity.uint256 engagementDueTimestamp = 4;       // Timestamp when engaegment is due
    .solidity.uint256 engagementCancelTimestamp = 5;    // Timestamp when engagement is cancelled
    .solidity.uint256 engagementCompleteTimestamp = 6;  // Timestamp when engagement is complete
    EngagementState engagementState = 7;
    bytes engagementCustomProperty = 8;
}