syntax = "proto3";

import "SolidityTypes.proto";

message Payable {
    .solidity.uint256 id = 1;
    .solidity.uint256 engagementId = 2;
    .solidity.address obligatorAddress = 3;
    .solidity.address claimorAddress = 4;
    .solidity.address tokenAddress = 5;
    .solidity.uint256 amount = 6;
    .solidity.uint256 dueTimestamp = 7;
}